@@ -206,3 +206,4 @@ Revision	Version Updated		Log Message
 189		C++			Update more province mappings for coastal provinces
 190		C++			Convert armies and navies
 191		C++			Fix Benelux mappings for HTTT. Error instead of crashing on bad mappings. Include port lists in build.
+192		C++			Read regiment costs from a file instead of hardcoding them
